ECOSUI-150 fixed scroll x, visibility actions when there is scroll page

--- a/src/components/Journals/Journals.scss
+++ b/src/components/Journals/Journals.scss
@@ -4,7 +4,8 @@
   position: relative;
   height: 100%;
   width: 100%;
-  overflow: hidden;
+  overflow-y: hidden;
+  overflow-x: auto;
   display: flex;
 
   &_scroll {
